--- a/ArchivPoznamek/ArchivPoznamek/appsettings.json
+++ b/ArchivPoznamek/ArchivPoznamek/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "ArchivPoznamek": "Server=(localdb)\\mssqllocaldb;Database=ArchivPoznamekPlechac;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "AllowedHosts": "*"
 }
